@@ -1,4 +1,4 @@
-Copyright 1998 Predrag Balorda, London, UK
+Copyright 1998,1999,2000 Predrag Balorda, London, UK
 All rights reserved.
 
 Redistribution and use in source and binary forms are permitted only
